--- a/_includes/signatures.html
+++ b/_includes/signatures.html
@@ -1,4 +1,6 @@
+{% if site.data.signed.size > 0 %}
 <p><b>Signed by {{ site.data.signed.size }} individuals:</b></p>
+{% endif %}
 <ol>
   <!--<li><a href="https://github.com/[1-999][1-999][1-999][1-999]">Spider Trap</a></li>-->
 {%- capture signs -%}
