--- a/_includes/hreflangs.html
+++ b/_includes/hreflangs.html
@@ -2,5 +2,5 @@
   {%- assign hreflang = translation.url | replace: '/index-', '' | replace: '.html', '' -%}
   <link rel="alternate" hreflang="{{ hreflang }}" href="{{ translation.url | absolute_url }}" />
 {%- endfor -%}
-<link rel="alternate" hreflang="en" href="https://SaveOpenSource.github.io/" />
-<link rel="alternate" hreflang="x-default" href="https://SaveOpenSource.github.io/" />
+<link rel="alternate" hreflang="en" href="https://osd.fyi/" />
+<link rel="alternate" hreflang="x-default" href="https://osd.fyi/" />
