--- a/_includes/hreflangs.html
+++ b/_includes/hreflangs.html
@@ -1,6 +1,5 @@
 {% for translation in site.translations %}
-  {%- assign hreflang = translation.url | replace: '/index-', '' | replace: '.html', '' -%}
-  <link rel="alternate" hreflang="{{ hreflang }}" href="{{ translation.url | absolute_url }}" />
+  <link rel="alternate" hreflang="{{ translation.locale }}" href="{{ translation.url | absolute_url }}" />
 {%- endfor -%}
 <link rel="alternate" hreflang="en" href="https://osd.fyi/" />
 <link rel="alternate" hreflang="x-default" href="https://osd.fyi/" />
