--- a/_includes/translations.html
+++ b/_includes/translations.html
@@ -1,11 +1,13 @@
 <div class="translations">
   <p>Translations:</p>
-  <a class="translation" href='/'>🇺🇸</a>
+    <a class="translation" href='/'>
+      🇺🇳
+    </a>
   {% for translation in site.translations %}
+    {% assign locale = translation.locale %}
+    {% assign emoji_flag = site.data.languages[locale][1] %}
     <a class="translation" href="{{ translation.url }}">
-      {%- assign langcode = translation.locale | split: "_" | last | downcase -%}
-      {%- assign c1 = langcode | slice: 0, 1 -%}
-      {%- assign c2 = langcode | slice: 1, 1 -%}
-      {{- site.data.emoji[c1] -}}{{- site.data.emoji[c2] -}}
-    </a>{% endfor %}
+      {{ emoji_flag }}
+    </a>
+  {% endfor %}
 </div>
