--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-{%- assign lang = page.locale | split: "_" | first -%}
-<html lang="{{ lang | default: page.lang | default: site.lang | default: "en" }}">
+<html lang="{{ page.locale | default: page.lang | default: site.lang | default: "en" }}">
 
   {%- include head.html -%}
 
