--- a/_includes/hreflangs.html
+++ b/_includes/hreflangs.html
@@ -1,5 +1,5 @@
 {% for translation in site.translations %}
   <link rel="alternate" hreflang="{{ translation.locale }}" href="{{ translation.url | absolute_url }}" />
 {%- endfor -%}
-<link rel="alternate" hreflang="en" href="https://osd.fyi/" />
-<link rel="alternate" hreflang="x-default" href="https://osd.fyi/" />
+<link rel="alternate" hreflang="en" href="https://opensourcedeclaration.org/" />
+<link rel="alternate" hreflang="x-default" href="https://opensourcedeclaration.org/" />
