add footer links

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,21 @@
 <footer class="site-footer h-card">
   <data class="u-url" href="{{ "/" | relative_url }}"></data>
 
-  <!--
   <div class="wrapper">
 
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
-        <p>{{- site.description | escape -}}</p>
+      <!--  <p>{{- site.description | escape -}}</p> -->
       </div>
 
       <div class="footer-col footer-col-2">
-        {%- include social.html -%}
+        <!-- {%- include social.html -%} -->
+        <p>
+          <a href="https://opensourcedefinition.org" target="_blank" rel="noopener noreferrer">Definition</a> |
+          <a href="https://discuss.opensourcedefinition.org" target="_blank" rel="noopener noreferrer">Discuss</a></p>
       </div>
     </div>
 
   </div>
-  -->
+  
 </footer>
