--- a/_includes/language-switcher.html
+++ b/_includes/language-switcher.html
@@ -1,2 +1,2 @@
 <!-- _includes/language-switcher.html -->
-<script src="/assets/js/language-switcher.js"></script>
+<script src="/assets/js/languages.js"></script>
