try fix count and hide emails of signers

--- a/_includes/signatures.html
+++ b/_includes/signatures.html
@@ -26,6 +26,10 @@
   <li>
   	<a href="{{ link }}">{{ name }}</a>
   </li>
+  {%- else -%}
+  <li>
+  	<a name="#">{{ name }}</a>
+  </li>
   {%- endif -%}
 {%- endfor -%}
 </ol>
