--- a/_includes/signatures.html
+++ b/_includes/signatures.html
@@ -26,7 +26,7 @@
   <li>
   	<a href="{{ link }}">{{ name }}</a>
   </li>
-  {%- elif sign_items[2] -%}
+  {%- elsif sign_items[2] -%}
   {%- assign name = sign_items[2] -%}
   <li>
   	<a name="#">{{ name }}</a>
