signatures.html: links in new window

--- a/_includes/signatures.html
+++ b/_includes/signatures.html
@@ -24,7 +24,7 @@
   {%- assign name = sign_items[2] -%}
   {%- assign link = sign_items[4] -%}
   <li>
-  	<a href="{{ link }}">{{ name }}</a>
+	<a href="{{ link }}" target="_blank">{{ name }}</a>
   </li>
   {%- elsif sign_items[2] -%}
   {%- assign name = sign_items[2] -%}
