--- a/_includes/translations.html
+++ b/_includes/translations.html
@@ -1,5 +1,5 @@
 <div class="translations">
-  <p>Translations:</p>
+  <p>Auto-translations:</p>
     <a class="translation" href='/'>
       🇺🇳
     </a>
